--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                             </video>
 
                             <div class="about-video-info d-flex flex-column">
-                                <h4 class="mt-auto">Мы радуем наших посетителей с 2018 года.</h4>
+                                <h4 class="mt-auto">Мы радуем наших посетителей с 2022 года.</h4>
                             </div>
                         </div>
                     </div>
@@ -153,13 +153,11 @@
 
                         <h2 class="text-white mb-3">Кафе «Al-Arabiya»</h2>
 
-                        <p class="text-white">Двери нашего первого заведения были открыты в далеком 2018 году.</p>
+                        <p class="text-white">Двери нашего первого заведения были открыты в далеком 2022 году.</p>
 
                         <p class="text-white">Это было одино из первых кафе такого рода, которое появилось в Нестеровском, и
                             людям это очень понравилось.</p>
-                        <p class="text-white">Основателем нашего заведения является <em class="text-danger">Оздоев
-                                Курейш</em>. </p>
-
+                        <p class="text-white">Основателем нашего заведения является <em class="text-danger"> Курейш Оздоев</em>. </p>
                     </div>
 
                 </div>
@@ -244,7 +242,7 @@
                     <div class="col-lg-6 col-12 mx-auto mt-5 mt-lg-0 ps-lg-5">
                         <h6 class="text-white">Кафе в Нестеровском</h6>
                         <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d181.45112880326383!2d45.05385885639756!3d43.30969441990737!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2snl!4v1747685664157!5m2!1sru!2snl"
+                            src="https://www.google.ru/maps/place/Молодёжная+ул.,+Нестеровская,+Респ.+Ингушетия,+386250/@43.2445075,45.041397,17z/data=!3m1!4b1!4m6!3m5!1s0x40503f8133e4807b:0x2413831b986674f!8m2!3d43.2445075!4d45.041397!16s%2Fg%2F11pkf1p0_8?entry=ttu&g_ep=EgoyMDI1MDcyNy4wIKXMDSoASAFQAw%3D%3D"
                             width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"
                             referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
@@ -258,15 +256,17 @@
             <div class="container">
                 <div class="row">
 
-                    <!-- Назрань -->
+                    
                     <div class="col-lg-4 col-12 mb-2">
-                        <em class="text-white d-block ">с. Нестеровская:</em>
-
-                        <strong class="text-white d-block">
-                            <i class="bi-geo-alt"></i>
-                            улица Молодежная, д. 30.
-                        </strong>
-
+                        <em class="text-white d-block">с. Нестеровская:</em>
+                        <a href="https://yandex.ru/maps/11012/republic-of-ingushetia/house/molodyozhnaya_ulitsa_30/YEwYdgNkQUcCQFppfX51cntjYA==/?ll=45.044825%2C43.243704&z=15.37" 
+                           target="_blank" 
+                           class="text-white text-decoration-none">
+                            <strong class="d-block">
+                                <i class="bi-geo-alt"></i>
+                                улица Молодежная, д. 30.
+                            </strong>
+                        </a>
                     </div>
 
                     <div class="col-lg-3 col-12 mb-2">
@@ -291,7 +291,7 @@
                         <ul class="opening-hours-list">
                             <strong class="d-flex">
                                 Пн - Вск:&nbsp;&nbsp;
-                                <strong>11:00 - 23:00</strong>
+                                <strong>11:00 - 00:00</strong>
                             </strong>
                         </ul>
                     </div>
