--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description"
-        content="Al-Arabiya - сеть уютных кафе в Ингушетии (Назрань, Сунжа). Предлагаем вкуснейшую шаурму, гиро, донар, куры-гриль и многое другое. Открыты с 2016 года.">
+        content="Al-Arabiya - уютное кафе в Ингушетии Нестеровская. Предлагаем вкуснейшую шаурму, гиро, донар, куры-гриль и многое другое. Открыты с 2022 года.">
     <meta name="author" content="Ихватун">
 
     <title>"Al-Arabiya — уютное кафе в Нестеровском"</title>
