Изменения со стороны заказчика

--- a/index.html
+++ b/index.html
@@ -126,17 +126,14 @@
           <div class="contact-wrapper">
             <div class="contact-info">
               <h3 class="address-title">Адрес кафе:</h3>
-              <div class="col-lg-4 col-12 mb-2">
-                <em class="text-white d-block"></em>
+              <div>
                 <a href="https://yandex.ru/maps/11012/republic-of-ingushetia/house/molodyozhnaya_ulitsa_30/YEwYdgNkQUcCQFppfX51cntjYA==/?ll=45.044825%2C43.243704&z=15.37" 
                    target="_blank" 
                    class="text-white text-decoration-none">
-                    <strong class="d-block" style="white-space: nowrap;">
-                      Республика Ингушетия, с. Нестеровская, ул. Молодежная, д. 30
-                    </strong><br />
+                   <strong class="d-block">Республика Ингушетия, с. Нестеровская, ул. Молодежная, д. 30</strong>
                 </a>
                 <strong> Время работы: Пн - Вск 11:00 - 00:00</strong>
-            </div>
+              </div>
           <div class="social-icons">  
                 <a
                   href="https://wa.me/79287339191"
@@ -211,20 +208,6 @@
     <div class="gallery-container" style="max-width: 100%; margin: 0 auto;">
       <div class="swiper gallery-slider">
         <div class="swiper-wrapper">
-
-            <div class="swiper-slide">
-              <div class="slide-content">
-                <img src="images/slides/menu.jpg" loading="lazy" width="800" height="600" alt="Меню, Кафе, Нестеровская,Ингушетия" class="gallery-image"/>
-                <div class="image-caption">Первые блюда</div>
-              </div>
-            </div>
-          
-            <div class="swiper-slide">
-              <div class="slide-content">
-                <img src="images/slides/menu1.jpg" loading="lazy" width="800" height="600" alt="Меню, Кафе, Нестеровская,Ингушетия" class="gallery-image">
-                <div class="image-caption">Вторые блюда</div>
-              </div>
-            </div>
 
             <div class="swiper-slide">
               <div class="slide-content">
