--- a/index.html
+++ b/index.html
@@ -32,11 +32,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 	
     <!-- Favicon -->
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" sizes="180x180" href="foto/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" href="foto/favicon-16x16.png" sizes="16x16" />
-    <link rel="icon" type="image/png" href="foto/favicon-32x32.png" sizes="32x32" />
-    <link rel="manifest" href="foto/site.webmanifest">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
+    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+    <link rel="manifest" href="site.webmanifest">
   </head>
 
 
